# FluxionDB

./: .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  CLI.md  CMakeLists.txt  Dockerfile  Makefile  README.md  SKILLS.md  docker-entrypoint.sh  fluxiondb.pro
.github/workflows/: build-java-client.yml  cli-release.yml  docker-build-deploy.yml
cli/: README.md  go.mod  go.sum  install.sh  main.go
cli/cmd/: api_keys.go  archive_helpers.go  connections.go  delete_collection.go  delete_document.go  delete_value.go  export.go  fetch_collections.go  fetch_document.go  fetch_latest.go  get_values.go  import.go  import_test.go  insert_record.go  list_keys.go  root.go  set_value.go
clients/go/: DOCUMENTATION.md  README.md  client.go  client_test.go  types.go
clients/java/: DOCUMENTATION.md  INSTALL.md  QUICKSTART.md  README.md  TestClient.java  build.sh  pom.xml
clients/java/examples/: BasicUsageExample.java
clients/java/src/main/java/com/volandoo/fluxiondb/: FluxionDBClient.java  FluxionDBClientBuilder.java
clients/java/src/main/java/com/volandoo/fluxiondb/connection/: ConnectionState.java  ReconnectionStrategy.java  WebSocketManager.java
clients/java/src/main/java/com/volandoo/fluxiondb/exceptions/: AuthenticationException.java  (+3 more)
clients/node/: DOCUMENTATION.md  README.md  package.json
clients/node/src/: client.retry.test.ts  client.test.ts  client.timeout.test.ts  client.ts  errors.ts  index.ts  types.ts
clients/python/: DOCUMENTATION.md  README.md  pyproject.toml
clients/python/src/fluxiondb_client/: client.py  types.py
clients/python/tests/: test_client.py
src/: collection.cpp  collection.h  datarecord.cpp  datarecord.h  datarecordheader.h  deletecollection.cpp  deletecollection.h  deletedocument.cpp  deletedocument.h  deletemultiplerecords.cpp  deletemultiplerecords.h  deleterecord.cpp  deleterecord.h  deleterecordsrange.cpp  deleterecordsrange.h  insertrequest.cpp  insertrequest.h  json_helpers.h  keyvalue.cpp  keyvalue.h  main.cpp  message.h  messagerequest.cpp  messagerequest.h  querydocument.cpp  querydocument.h  querysessions.cpp  querysessions.h  querysessionsresponse.cpp  querysessionsresponse.h  sqlitestorage.cpp  sqlitestorage.h  websocket.cpp  websocket.h
(+25 files in other folders)
